welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:1: error: not found: type int
def isInRange(v:int, a:int, b:int){
                ^in3050:1: error: not found: type int
def isInRange(v:int, a:int, b:int){
                       ^in3050:1: error: not found: type int
def isInRange(v:int, a:int, b:int){
                              ^in3050:2: warning: enclosing method isInRange has result type Unit: return value discarded
  return (v >= a && v <= b)
  ^in3050:8: error: value && is not a member of Unit
  return (isInRange(a, 30, 40) && isInRange(b, 30, 40)) ||
                               ^in3050:9: error: value && is not a member of Unit
         (isInRange(a, 40, 50) && isInRange(b, 40, 50))
                               ^